fix: add spacing for each line in callout component (#6489)

--- a/src/styles/callout.scss
+++ b/src/styles/callout.scss
@@ -25,3 +25,6 @@
     margin: var(--amplify-space-large) 0;
   }
 }
+.amplify-message__content p:not(:last-child) {
+  margin-bottom: var(--amplify-space-medium);
+}
